# qt_template

./: .gitignore  CMakeLists.txt  README.md  buildQt.bat  sonar-project.properties  sonar_analyzer.bat
.github/workflows/: build.yml
app/: CMakeLists.txt
app/view/: CMakeLists.txt
app/view/test/: CMakeLists.txt
scripts/: deploy-release.sh  parse_xml_unittest.py
